Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Lista de Links -->
     <div class="links">
         <a href="https://mgpersonalizados.netlify.app" target="_blank">Acesse o nosso site</a>
-        <a href="https://api.whatsapp.com/send/?phone=5565996216558&text=Ol%C3%A1+MG+Personalizados!+Eu+adorei+o+trabalho+e+gostaria+de+&type=phone_number&app_absent=0" target="_blank">Contate-nos no Whatsapp
+        <a href="https://api.whatsapp.com/send/?phone=5565996216558&text=Ol%C3%A1+MG+Personalizados!+Eu+adorei+o+trabalho+e+gostaria+de+&type=phone_number&app_absent=0" target="_blank">Nosso Whatsapp
         <a href="https://instagram.com/mgpapelariacriativ" target="_blank">Siga-nos no Instagram</a>
     </div>
 
